[package]
name = "buplib"
version = "3.2.0"
edition = "2021"
description = "A small beeper / buzzer socket wrapper library"
license = "Unlicense"
repository = "https://github.com/p6nj/bup"
include = ["examples/*", "src/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.17.3", default-features = false }

[dev-dependencies]
anyhow = "1.0.81"

[features]
mut = []
future = ["mut"]
